# src/routes/user/companion.ts
@@ -2,6 +2,7 @@ import express from 'express';
 import { getDashboardData } from '../../controllers/companion/dashboard';
 import { becomeCompanion, becomeClient, toggleOnlineStatus } from '../../controllers/companion/profile';
 import { verifyUser } from '../../middlewares/verifyUser';
+import { UpdateFcm } from '../../controllers/user/user';
 
 const router = express.Router();
 
@@ -12,5 +13,6 @@ router.get('/dashboard', getDashboardData);
 router.post('/become-companion', becomeCompanion);
 router.post('/become-client', becomeClient);
 router.post('/toggle-online-status', toggleOnlineStatus);
+router.post('/update-fcm', UpdateFcm);
 
 export default router;
